update for custom ci image